[package]
name = "pallet-midds"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3"
homepage.workspace = true
repository.workspace = true
description = "FRAME pallet that manage a MIDDS actor"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { features = [
	"derive",
	"max-encoded-len",
], workspace = true }
log = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
allfeat-support = { workspace = true }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }

[features]
default = ["std"]
std = [
	"polkadot-sdk/std",
	"parity-scale-codec/std",
	"log/std",
	"scale-info/std",
	"allfeat-support/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"allfeat-support/runtime-benchmarks",
]
try-runtime = ["polkadot-sdk/try-runtime"]
