[package]
name = 'pallet-validator-set'
version = '1.1.0'
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]

serde = { workspace = true }
log = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true }
pallet-session = { workspace = true, features = ['historical'] }
sp-staking = { workspace = true }
sp-io = { workspace = true }
sp-state-machine = { workspace = true }

[features]
default = ['std']
std = [
  'parity-scale-codec/std',
  'scale-info/std',
  'serde/std',
  'log/std',
  'frame-support/std',
  'pallet-session/std',
  'frame-system/std',
  'sp-staking/std',
  'sp-io/std',
  'sp-state-machine/std',
  'frame-benchmarking/std'
]
runtime-benchmarks = ['frame-support/runtime-benchmarks', 'frame-benchmarking/runtime-benchmarks' ]
try-runtime = [
  'frame-system/try-runtime',
  'frame-support/try-runtime',
  'pallet-session/try-runtime',
]
