[package]
name = 'pallet-validators'
version = '1.0.0'
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true }
pallet-session = { workspace = true, features = ['historical'] }
pallet-balances = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-staking = { workspace = true }

[features]
default = ['std']
std = [
  'parity-scale-codec/std',
  'scale-info/std',
  'log/std',
  'frame-support/std',
  'pallet-session/std',
  'frame-system/std',
  "pallet-balances/std",
  'sp-io/std',
  'sp-runtime/std',
  'sp-staking/std',
  'frame-benchmarking/std'
]
runtime-benchmarks = ['frame-support/runtime-benchmarks', 'frame-benchmarking/runtime-benchmarks' ]
try-runtime = [
  'frame-system/try-runtime',
  'frame-support/try-runtime',
  'pallet-session/try-runtime',
]
