[package]
name = "pallet-evm-precompile-balances-erc20"
description = "A Precompile to expose a Balances pallet through an ERC20-compliant interface."
version = "0.1.0"
edition = "2021"
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true, features = ["max-encoded-len"] }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

# Frontier
precompile-utils = { workspace = true, default-features = false }
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }

num_enum = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
serde = { workspace = true }
libsecp256k1 = { workspace = true }
sha3 = { workspace = true }

precompile-utils = { workspace = true, features = ["testing"] }

pallet-timestamp = { workspace = true, features = ["std"] }
scale-info = { workspace = true, features = ["derive"] }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
    "fp-evm/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-balances/std",
    "pallet-evm/std",
    "parity-scale-codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-std/std",
    "sp-runtime/std",
    "precompile-utils/std",
    "log/std",
    "num_enum/std",
]