[package]
authors.workspace = true
description = "Harmonie runtime."
edition.workspace = true
name = "harmonie-runtime"
readme = "README.md"
version.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }

frame-support = { workspace = true }
frame-election-provider-support = { workspace = true }
frame-system = { workspace = true, features = ["experimental"] }
frame-try-runtime = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }

shared-runtime = { workspace = true }

sp-arithmetic = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = { workspace = true }
allfeat-primitives = { workspace = true }
sp-io = { workspace = true }
sp-genesis-builder = { workspace = true }

# Allfeat pallets
pallet-artists = { workspace = true }

pallet-babe = { workspace = true }
pallet-authority-discovery = { workspace = true }
pallet-authorship = { workspace = true }
pallet-im-online = { workspace = true }
pallet-identity = { workspace = true }
pallet-mmr = { workspace = true }
pallet-multisig = { workspace = true }
pallet-offences = { workspace = true }
pallet-offences-benchmarking = { workspace = true, optional = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-session-benchmarking = { workspace = true, optional = true }
pallet-scheduler = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-grandpa = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-utility = { workspace = true }
pallet-validator-set = { workspace = true }

# Frontier
fp-evm = { workspace = true, features = ["serde"] }
fp-rpc = { workspace = true }
fp-self-contained = { workspace = true, features = ["serde"] }
# Frontier FRAME
pallet-ethereum = { workspace = true }
pallet-evm = { workspace = true }
pallet-evm-precompile-modexp = { workspace = true }
pallet-evm-precompile-sha3fips = { workspace = true }
pallet-evm-precompile-simple = { workspace = true }
pallet-evm-precompile-bn128 = { workspace = true }
pallet-evm-precompile-blake2 = { workspace = true }
precompile-utils = { workspace = true }

# Allfeat precompiles
pallet-evm-precompile-balances-erc20 = { workspace = true }
pallet-evm-precompile-artists = { workspace = true }


# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Local Dependencies
[dev-dependencies]
sha3 = { workspace = true, features = ["std"] }

shared-runtime = { workspace = true, features = ["std", "test"] }
precompile-utils = { workspace = true, features = ["std", "testing"] }

[build-dependencies]
substrate-wasm-builder = { optional = true, workspace = true, default-features = true }

[features]
default = ["std", "metadata-hash"]
with-tracing = ["frame-executive/with-tracing"]
std = [
    "frame-election-provider-support/std",
    "num_enum/std",
    "sp-genesis-builder/std",
    "sp-arithmetic/std",
    "sp-authority-discovery/std",
    "pallet-artists/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "sp-consensus-babe/std",
    "sp-consensus-grandpa/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-executive/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "sp-inherents/std",
    "pallet-mmr/std",
    "pallet-multisig/std",
    "pallet-identity/std",
    "pallet-scheduler/std",
    "allfeat-primitives/std",
    "sp-offchain/std",
    "pallet-offences/std",
    "pallet-offences-benchmarking?/std",
    "pallet-preimage/std",
    "pallet-proxy/std",
    "sp-core/std",
    "sp-std/std",
    "pallet-session/std",
    "pallet-session-benchmarking?/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-session/std",
    "pallet-sudo/std",
    "frame-support/std",
    "frame-benchmarking?/std",
    "frame-system-benchmarking?/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "sp-transaction-pool/std",
    "pallet-utility/std",
    "sp-version/std",
    "log/std",
    "frame-try-runtime?/std",
    "sp-io/std",
    "frame-metadata-hash-extension/std",
    "pallet-validator-set/std",
    "shared-runtime/std",
    # Frontier
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    # Frontier FRAME
    "pallet-ethereum/std",
    "pallet-evm/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-bn128/std",
    "pallet-evm-precompile-blake2/std",
    "precompile-utils/std",
    "pallet-evm-precompile-balances-erc20/std",
    "pallet-evm-precompile-artists/std",
]
runtime-benchmarks = [
    "frame-election-provider-support/runtime-benchmarks",
    "shared-runtime/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-babe/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-identity/runtime-benchmarks",
    "pallet-im-online/runtime-benchmarks",
    "pallet-mmr/runtime-benchmarks",
    "pallet-multisig/runtime-benchmarks",
    "pallet-offences-benchmarking/runtime-benchmarks",
    "pallet-preimage/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-scheduler/runtime-benchmarks",
    "pallet-session-benchmarking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-artists/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-validator-set/runtime-benchmarks",
]
try-runtime = [
    "frame-election-provider-support/try-runtime",
    "frame-executive/try-runtime",
    "frame-try-runtime/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-authority-discovery/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-babe/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-im-online/try-runtime",
    "pallet-mmr/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-offences/try-runtime",
    "pallet-preimage/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-artists/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-evm/try-runtime",
    "pallet-ethereum/try-runtime",
    "sp-runtime/try-runtime",
    "fp-self-contained/try-runtime",
    "pallet-validator-set/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
    # substrate
    "sp-api/disable-logging",
]