[package]
authors.workspace = true
description = "Allfeat runtime."
edition.workspace = true
name = "allfeat-runtime"
readme = "README.md"
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [
	"derive"
] }
scale-info = { features = ["derive", "serde"], workspace = true }
log = { workspace = true }
smallvec = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }
array-bytes = { workspace = true }

shared-runtime = { workspace = true }
allfeat-primitives = { workspace = true }

# Allfeat pallets
pallet-token-allocation = { workspace = true }

sp-application-crypto = { workspace = true }
sp-core = { features = ["serde"], workspace = true }
sp-keyring = { workspace = true }
sp-version = { features = ["serde"], workspace = true }
sp-consensus-aura = { features = ["serde"], workspace = true }
sp-consensus-grandpa = { features = ["serde"], workspace = true }
sp-genesis-builder = { workspace = true }
sp-api = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-runtime = { features = ["serde"], workspace = true }
sp-block-builder = { workspace = true }
sp-io = { workspace = true }

frame-try-runtime = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-executive = { workspace = true }

pallet-timestamp = { workspace = true }
pallet-utility = { workspace = true }
pallet-aura = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-authorship = { workspace = true }
pallet-sudo = { workspace = true }
pallet-session = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-preimage = { workspace = true }
pallet-proxy = { workspace = true }
pallet-multisig = { workspace = true }
pallet-balances = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }

pallet-validators = { workspace = true }

# Benchmarking
frame-benchmarking = { optional = true, workspace = true }
frame-system-benchmarking = { optional = true, workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }

[features]
default = ["std"]
with-tracing = []
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"pallet-validators/std",
	"shared-runtime/std",
	"serde_json/std",
	"pallet-timestamp/std",
	"frame-support/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"pallet-utility/std",
	"pallet-aura/std",
	"pallet-grandpa/std",
	"pallet-authorship/std",
	"pallet-sudo/std",
	"pallet-session/std",
	"pallet-scheduler/std",
	"pallet-preimage/std",
	"pallet-proxy/std",
	"pallet-multisig/std",
	"pallet-balances/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-token-allocation/std",
	"pallet-treasury/std",
	"sp-application-crypto/std",
	"sp-version/std",
	"sp-consensus-aura/std",
	"sp-consensus-grandpa/std",
	"sp-genesis-builder/std",
	"sp-keyring/std",
	"sp-core/std",
	"sp-api/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-block-builder/std",
	"sp-io/std",
	"frame-metadata-hash-extension/std",
	"frame-executive/std",
	"frame-system-rpc-runtime-api/std",
	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",
	"substrate-wasm-builder",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-proxy/runtime-benchmarks",
	"pallet-multisig/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"pallet-validators/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-token-allocation/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-validators/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-session/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-proxy/try-runtime",
	"pallet-multisig/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-token-allocation/try-runtime",
	"pallet-treasury/try-runtime"
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
