[package]
authors.workspace = true
description = "Melodie Testnet runtime."
edition.workspace = true
name = "melodie-runtime"
readme = "README.md"
version.workspace = true

[dependencies]
parity-scale-codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = ["derive"] }
static_assertions = { workspace = true }
log = { workspace = true }
num_enum = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }

polkadot-sdk = { workspace = true, features = [
	"runtime",
	"experimental",
	"pallet-authorship",
	"pallet-mmr",
	"pallet-babe",
	"pallet-grandpa",
	"pallet-timestamp",
	"pallet-utility",
	"pallet-sudo",
	"pallet-session",
	"pallet-scheduler",
	"pallet-preimage",
	"pallet-proxy",
	"pallet-multisig",
	"pallet-balances",
	"pallet-im-online",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-identity",
	"pallet-authority-discovery",
] }


shared-runtime = { workspace = true }
allfeat-primitives = { workspace = true }

# Allfeat pallets
pallet-midds = { workspace = true }

# Allfeat MIDDS
midds-stakeholder = { workspace = true }
midds-song = { workspace = true }

pallet-validator-set = { workspace = true }

# Local Dependencies
[dev-dependencies]
sha3 = { workspace = true, features = ["std"] }
shared-runtime = { workspace = true, features = ["std", "test"] }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
	"substrate-wasm-builder",
] }

[features]
default = ["std"]
with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"polkadot-sdk/std",
	"num_enum/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"pallet-validator-set/std",
	"shared-runtime/std",
	"serde_json/std",
	"pallet-midds/std",
	# MIDDS
	"midds-stakeholder/std",
	"midds-song/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"shared-runtime/runtime-benchmarks",
	"pallet-validator-set/runtime-benchmarks",
	"pallet-midds/runtime-benchmarks",
	"midds-stakeholder/runtime-benchmarks",
	"midds-song/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"pallet-validator-set/try-runtime",
	"pallet-midds/try-runtime",
]

# TODO metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# A convenience feature for enabling things when doing a build
# for an on-chain release.
# on-chain-release-build = ["metadata-hash", "sp-api/disable-logging"]
