[package]
authors.workspace = true
description = "Melodie Testnet runtime."
edition.workspace = true
name = "melodie-runtime"
readme = "README.md"
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
smallvec = { workspace = true }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
] }

polkadot-sdk = { workspace = true, features = [
	"runtime",
	"pallet-authorship",
	"pallet-mmr",
	"pallet-babe",
	"pallet-grandpa",
	"pallet-timestamp",
	"pallet-utility",
	"pallet-sudo",
	"pallet-session",
	"pallet-scheduler",
	"pallet-preimage",
	"pallet-proxy",
	"pallet-multisig",
	"pallet-balances",
	"pallet-im-online",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"pallet-identity",
	"pallet-authority-discovery",
	"pallet-safe-mode",
] }
shared-runtime = { workspace = true }
allfeat-primitives = { workspace = true }

# Allfeat pallets
pallet-midds = { workspace = true }

# Allfeat MIDDS
midds-stakeholder = { workspace = true }
midds-musical-work = { workspace = true }

pallet-validator-set = { workspace = true }

# Local Dependencies
[dev-dependencies]
shared-runtime = { workspace = true, features = ["std", "test"] }

[build-dependencies]
substrate-wasm-builder = { optional = true, default-features = true, workspace = true }

[features]
default = ["std"]
with-tracing = ["polkadot-sdk/with-tracing"]
std = [
	"polkadot-sdk/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"pallet-validator-set/std",
	"shared-runtime/std",
	"serde_json/std",
	"pallet-midds/std",
	"substrate-wasm-builder",
	# MIDDS
	"midds-stakeholder/std",
	"midds-musical-work/std",
]
runtime-benchmarks = [
	"polkadot-sdk/runtime-benchmarks",
	"shared-runtime/runtime-benchmarks",
	# Waiting FIX https://github.com/Allfeat/substrate-validator-set/issues/1
	#	"pallet-validator-set/runtime-benchmarks",
	"pallet-midds/runtime-benchmarks",
	"midds-stakeholder/runtime-benchmarks",
	"midds-musical-work/runtime-benchmarks",
]
try-runtime = [
	"polkadot-sdk/try-runtime",
	"pallet-validator-set/try-runtime",
	"pallet-midds/try-runtime",
]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []

# A convenience feature for enabling things when doing a build
# for an on-chain release.
on-chain-release-build = ["metadata-hash"]
